# memexa

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .release.yaml  CHANGELOG.md  CHANGELOG.zh.md  CITATION.cff  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.zh.md  CONTRIBUTING.md  CONTRIBUTING.zh.md  GOVERNANCE.md  GOVERNANCE.zh.md  LICENSE  Makefile  PROGRESS.md  PROGRESS.zh.md  README.md  README.zh.md  ROADMAP.md  ROADMAP.zh.md  SECURITY.md  SECURITY.zh.md  SUPPORT.md  SUPPORT.zh.md  docker-compose.example.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  PULL_REQUEST_TEMPLATE.zh.md  dependabot.yml  release-drafter.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.zh.md  feature_request.md  feature_request.zh.md  question.md  question.zh.md
.github/workflows/: ci.yml  codeql.yml  dependabot-auto-merge.yml  publish.yml  release-drafter.yml  security.yml
config/: aliases.example.yaml  identity.example.yaml
docs/: 5_phase_query.md  5_phase_query.zh.md  api_roadmap.md  api_roadmap.zh.md  architecture.md  architecture.zh.md  configuration.md  configuration.zh.md  cost.md  cost.zh.md  faq.md  faq.zh.md  for_agents.md  for_agents.zh.md  performance.md  performance.zh.md  quickstart.md  quickstart.zh.md  troubleshooting.md  troubleshooting.zh.md  usage_guide.md  usage_guide.zh.md  why.md  why.zh.md
docs/case_studies/: 01_lab_report_pipeline.md  01_lab_report_pipeline.zh.md  02_meeting_brief_pattern.md  02_meeting_brief_pattern.zh.md  README.md  README.zh.md
docs/deployment/: docker-compose.md  docker-compose.zh.md  macos.md  macos.zh.md  windows.md  windows.zh.md
docs/integrations/: email.md  email.zh.md  qq.md  qq.zh.md  wechat.md  wechat.zh.md
docs/lessons_learned/: 01_tags_are_or.md  01_tags_are_or.zh.md  02_two_llm_gate_extract.md  02_two_llm_gate_extract.zh.md  03_pg_aware_pending.md  03_pg_aware_pending.zh.md  04_win_job_subprocess.md  04_win_job_subprocess.zh.md  05_qwen3_no_think.md  05_qwen3_no_think.zh.md  06_dual_gpu_swap.md  06_dual_gpu_swap.zh.md  README.md  README.zh.md
docs/migration/: path_resolver.md  path_resolver.zh.md
examples/demo_dataset/: README.md  README.zh.md  __init__.py  audio_demo_transcript.json  browser_demo.json  claude_demo.jsonl  email_demo.json  ingest.py  qq_demo.json  wechat_demo.json
memexa/: __init__.py  wechat_db.py
memexa/audio/: audio_session_classifier.py
memexa/chat/: __init__.py  metadata_builder.py
memexa/cli/: __init__.py  main.py  wizards.py
memexa/core/: _atomic_state.py  _autopilot_flag.py  _file_lock.py  _gates_skip_budget.py  _git_helpers.py  _hook_utils.py  _migration_errors.py  _path_resolver.py  _paths.py  _pending_io.py  _plan_lint_common.py  _plan_path_resolver.py  _safe_fs.py  ac_verifier.py  action_items_hygiene.py  agent_dispatcher.py  agent_output_validator.py  agent_stall_detector.py  alias_suggester.py  approval_queue.py  archive_lookup.py  atomic_io.py  auto_dream.py  auto_scheduler.py  auto_trigger.py  autopilot_checkpoint.py  autopilot_telemetry.py  axis_lock.py  bench_dashboard.py  bench_runner.py  bfts_branch_survivor.py  big_loop.py  big_loop_trigger.py  canonicalizer.py  ceo_approve.py  ceo_feedback.py  chat_context_provider.py  ci_env_grep_gate.py  claude_reviewer.py  cmd_retry_tracker.py  (+148 more)
memexa/cron/: cron_manifest.py  cron_orchestrator.py
memexa/drivers/: backfill_v5_audio_driver.py  backfill_v5_browser_driver.py  backfill_v5_cc_driver.py  backfill_v5_email_driver.py  backfill_v5_qq_driver.py  backfill_v5_wechat_driver.py
memexa/extraction/: audio_pipeline.py  batch_chat_cursor.py  batch_chat_extract.py  batch_classifier.py  browser_history_reader.py  bulk_dispatch_v2.py  chat_class_denylist.py  chat_extract_local.py  chat_graph_health_monitor.py  chat_room_memory_summary.py  chat_unified_batch_ingest.py  claude_code_to_v5_converter.py  consent_gate.py  email_batch_ingest.py  email_browser_batch_builder.py  email_history_fetcher.py  email_read.py  entity_pseudonym.py  inject_manifest_slice.py  keystone_outbox.py  keystone_pull.py  l0_worker_api.py  l0_worker_serial.py  l0_worker_v2_mac.py  l0_worker_v2_ustc.py  mlx_lm_serial_lock.py  mlx_lm_wrapper.py  pass1_prompt.py  pass2_prompt.py  pass2_tools.py  post_v1_email_browser_to_v5.py  preflight_backfill.py  pull_cards_v2.py  pull_round2_cards.sh  qq_batch_ingest.py  qq_realtime_watcher.py  query_demo_user_questions.py  run_e2e_pipeline.py  schedule_poll.py  streaming_post_v5.py  (+9 more)
memexa/ingestion/: v5_audio_batch_builder.py  v5_browser_batch_builder.py  v5_email_batch_builder.py  v5_wechat_batch_builder.py
memexa/templates/: docker-compose.yml
scripts/: full_pii_scan.sh  pii_patterns.example.txt  pii_patterns.txt  pre-commit-pii-scan.sh  release_orchestrator.sh
src/: __init__.py  wechat_db.py
src/audio/: audio_pipeline.py  voice_resolver.py
src/chat/: __init__.py
src/cli/: __init__.py  main.py
src/core/: __init__.py  _agent_spawns.py  _anomaly_notify.py  _atomic_state.py  _autopilot_flag.py  _errors.py  _gates_skip_budget.py  _git_helpers.py  _hook_utils.py  _path_resolver.py  _paths.py  _pending_io.py  _plan_lint_common.py  _plan_path_resolver.py  _safe_fs.py  _thresholds.py  _user_aliases.py  _user_identity.py  ac_verifier.py  action_items_hygiene.py  agent_dispatcher.py  agent_output_validator.py  agent_stall_detector.py  alias_suggester.py  arbiter_27b.py  archive_lookup.py  ast_security.py  async_executor.py  auto_dream.py  auto_scheduler.py  auto_trigger.py  autopilot_checkpoint.py  autopilot_telemetry.py  axis_lock.py  bench_dashboard.py  bench_runner.py  bfts_branch_survivor.py  big_loop.py  big_loop_trigger.py  canonicalizer.py  (+155 more)
src/cron/: cron_manifest_schema.json  cron_orchestrator.py
src/drivers/: backfill_v5_audio_driver.py  backfill_v5_browser_driver.py  backfill_v5_cc_driver.py  backfill_v5_email_driver.py  backfill_v5_qq_driver.py  backfill_v5_wechat_driver.py
src/extraction/: batch_chat_cursor.py  batch_chat_extract.py  batch_classifier.py  batch_prompts.py  browser_history_reader.py  bulk_dispatch_v2.py  chat_class_denylist.py  chat_extract_local.py  (+44 more)
(+52 files in other folders)
